# appositionizer

./: .bbp-project.yaml  .gitignore  .gitmodules  .gitreview  CMakeLists.txt  Dockerfile  LICENSE.txt  README.rst  tox.ini
.ci/: test_circuit1k-merged.sh  test_circuit1k-sonata.sh  test_circuit1k.sh  test_circuit2k.sh  test_nodesets.sh  test_population.sh
CMake/: warnings.cmake
CMake/config/: CompilerFlagsHelpers.cmake  ReleaseDebugAutoFlags.cmake
appositionizer/: CMakeLists.txt  appositionizer_main.cxx  arange.h  better_mpi.cxx  better_mpi.h  cell_slice.cxx  cell_slice.h  cell_slicer.cxx  cell_slicer.h  defines.h.in  distributed_memory_sorter.cxx  distributed_memory_sorter.h  geometry.h  index_magic.h  instrumentor.h  memory_tools.cxx  memory_tools.h  morphoi_merge_main.cxx  partial_collision.cxx  partial_collision.h  recipe.cxx  recipe.h  rename.sed  spatial_grid_hash.h  spatial_grid_hash.tcc
appositionizer/data/: CMakeLists.txt  apposition.cxx  apposition.h  apposition_space.cxx  apposition_space.h  cell.cxx  cell.h  cell_group.cxx  cell_group.h  section.cxx  section.h  segment.cxx  segment.h  segment_id.h
appositionizer/io/: CMakeLists.txt  bucketed_writer.h  filereader.cxx  filereader.h  filewriter.cxx  filewriter.h  iowriter.h  sonatawriter.cxx  sonatawriter.h  sorting.cxx  sorting.h  structures.cxx  structures.h
appositionizer/process/: CMakeLists.txt  apposition_filter.cxx  apposition_filter.h  disentangled.cxx  disentangled.h
doc/: Doxyfile.in  Doxygen.css  DoxygenLayout.xml
doc/developer_guide/: build_instructions.md  code_quality.md  mainpage.md  overview.md
doc/source/: algorithm.rst  conf.py  developer_guide_links.rst  index.rst  nomenclature.rst  usage.rst
sbatch/: asan-env.sh  cali-env.sh  cali-minimal-env.sh  cannonical_circuit.sh  circuit-1k.sh  circuit-2k.sh  circuit-NGV.sh  circuit-O1.v6a.sh  circuit-S1.v6a.sh  run_appositionizer.sh
sbatch/classic/: env.sh  run_circuit-1k.sbatch  run_circuit-2k.sbatch  run_circuit-NGV.sbatch  run_circuit-O1.v6a.sbatch  run_circuit-S1.v6a.sbatch
sbatch/modern/: env.sh  run_circuit-1k.sbatch  run_circuit-2k.sbatch  run_circuit-NGV.sbatch  run_circuit-O1.v6a.sbatch  run_circuit-S1.v6a.sbatch
tests/: CMakeLists.txt  apposition_space.cpp  arange.cpp  box.cpp  cell_group.cpp  cell_slicer.cpp  file_reader.cpp  index_magic.cpp  morphology.cpp  recipe.cpp  segment_overlap.cpp  segment_spine.cpp  segment_storage.cpp  serial_tests_main.cpp  serialization.cpp  sorting.cpp  spatial_index.cpp
tests/benchmarks/: CMakeLists.txt  overlap_main.cpp
tests/data/: branches_out_of_order.h5  nodes.h5  nodes_ab.h5  nodes_b.h5  nodesets.json  recipe.json  recipe.yaml  soma_spherical.h5
tests/data/empty_edges/: edges.0
tests/data/regions/: recipe.xml
tests/data/regions/case_01/: appositions.json  metadata.json  regions.json
tests/data/regions/case_02/: appositions.json  metadata.json  regions.json
tests/data/regions/case_03/: appositions.json  metadata.json  regions.json
tools/: add_regions.py  parse_hatchet.py  parse_mpi_report.py  slices.py  slicesVisualizer.py  sonata_compare.py  update_cmake_files.py  visualize_cylinders_in_blender.py
